--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ timezone: Europe/London
 
 title: Kieran Robson                          # the main title
 
-tagline: Docs for Kieran Robson   # it will display as the sub-title
+tagline: Blog for Kieran Robson   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  Kieran's guides and documentation
+  Kieran's blog and thoughts
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://docs.kieranrobson.com/'
+url: 'https://blog.kieranrobson.com/'
 
 github:
   username: KieranRobson             # change to your github username
